src/objects/Revenue__c.object
<CustomObject>
    <description>Object used to track revenue information from Oracle</description>
    <fields>
        <fullName>AccrueThroughDate__c</fullName>
        <label>Accrue Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AdjustingRevenueFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjusting Revenue Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgreementNumber__c</fullName>
        <label>Agreement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DraftRevenueNumCredited__c</fullName>
        <label>Draft Revenue Num Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DraftRevenueNum__c</fullName>
        <label>Draft Revenue Num</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GLDateFiscalMonth__c</fullName>
        <label>GL Date Fiscal Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLDatePreviousFiscalMonth__c</fullName>
        <label>GL Date Previous Fiscal Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLDate__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLPeriodName__c</fullName>
        <label>GL Period Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNum__c</fullName>
        <label>Line Num</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleSyncErrorMessage__c</fullName>
        <label>Oracle Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PADateFiscalMonth__c</fullName>
        <label>PA Date Fiscal Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PADatePreviousFiscalMonth__c</fullName>
        <label>PA Date Previous Fiscal Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PADate__c</fullName>
        <label>PA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAPeriodName__c</fullName>
        <label>PA Period Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjFunCurrencyCode__c</fullName>
        <label>ProjFunCurrencyCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Revenue</relationshipLabel>
        <relationshipName>Revenue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>RecordStatus__c</fullName>
        <description>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</description>
        <inlineHelpText>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RevenueSource__c</fullName>
        <label>Revenue Source</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskName__c</fullName>
        <formula>TaskNumber__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Number</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Revenue</relationshipLabel>
        <relationshipName>Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Revenue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AccrueThroughDate__c</columns>
        <columns>NAME</columns>
        <columns>GLDate__c</columns>
        <columns>Amount__c</columns>
        <columns>ProjectNumber__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Revenue Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>